--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      .inner {
-        max-width: 90%;
-      }
-    </style>
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
@@ -22,9 +17,9 @@
 
       {{ content }}
 
-      {% if site.github.private != true and site.github.license %}
+      {% if site.github.private != true and site.github.license and false %}
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        <!--This site is open source. {% github_edit_link "Improve this page" %}.-->
+        This site is open source. {% github_edit_link "Improve this page" %}.
       </div>
       {% endif %}
     </div>
