--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       {% if site.title and site.title != page.title %}
-      <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
+      <h3><a href="{{ "/" | absolute_url }}">HOME</a></h3>
       {% endif %}
 
       {{ content }}
