minor text change from 'HOME' to '< Home'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       {% if site.title and site.title != page.title %}
-      <h3><a href="{{ "/" | absolute_url }}">HOME</a></h3>
+      <h3><a href="{{ "/" | absolute_url }}">&#60; Home</a></h3>
       {% endif %}
 
       {{ content }}
